# FarrayInterop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dlla.f90  driver.cpp  farray.cpp  farray.hpp  farray.tpp  farrayimp.f90  ideall.txt  makefile  slla.f90
libdir/: farray.hpp  farray.tpp  farray1D.tpp
source/: dlla.f90  farrayimp.f90
src/: dlla.f90
tests/: test1D.cpp
